<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawHorizontalTrack="true"
    android:background="@color/white"
    android:id="@+id/tambahdata"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="40dp"
        android:autofillHints=""
        android:drawablePadding="15dp"
        android:textSize="20sp"
        android:background="@drawable/rounded_edittext"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:paddingHorizontal="15dp"
        android:hint="@string/nim"
        android:textColorHint="@color/grey"
        android:inputType="text"
        android:gravity="start|center_vertical"
        tools:ignore="MissingConstraints,TextViewEdits" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="160dp"
        android:layout_marginRight="40dp"
        android:autofillHints=""
        android:drawablePadding="15dp"
        android:background="@drawable/rounded_edittext"
        android:textSize="20sp"
        android:gravity="start|center_vertical"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:hint="@string/nama_alumni"
        android:textColorHint="@color/grey"
        android:inputType="text"
        android:paddingHorizontal="15dp"
        tools:ignore="MissingConstraints,TextViewEdits" />

    <EditText
        android:id="@+id/textviewnim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="220dp"
        android:layout_marginRight="40dp"
        android:autofillHints=""
        android:inputType="text"
        android:textSize="20sp"
        android:gravity="start|center_vertical"
        android:drawablePadding="15dp"
        android:background="@drawable/rounded_edittext"
        android:minHeight="48dp"
        android:hint="@string/tempat_lahir"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:paddingHorizontal="15dp"
        tools:ignore="MissingConstraints,TextViewEdits" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:autofillHints=""
        android:textSize="20sp"
        android:gravity="start|center_vertical"
        android:minHeight="48dp"
        android:paddingHorizontal="15dp"
        android:drawablePadding="15dp"
        android:hint="@string/tanggal_lahir"
        android:textColorHint="@color/grey"
        android:inputType="text"
        android:textColor="@color/black"
        android:background="@drawable/rounded_edittext"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:autofillHints=""
        android:textSize="20sp"
        android:gravity="start|center_vertical"
        android:minHeight="70dp"
        android:paddingHorizontal="15dp"
        android:drawablePadding="15dp"
        android:hint="@string/alamat"
        android:textColorHint="@color/grey"
        android:inputType="textPostalAddress"
        android:textColor="@color/black"
        android:background="@drawable/rounded_edittext"
        tools:ignore="MissingConstraints,TextViewEdits" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:autofillHints=""
        android:textSize="20sp"
        android:gravity="start|center_vertical"
        android:minHeight="48dp"
        android:paddingHorizontal="15dp"
        android:drawablePadding="15dp"
        android:hint="@string/agama"
        android:textColorHint="@color/grey"
        android:inputType="text"
        android:textColor="@color/black"
        android:background="@drawable/rounded_edittext"
        tools:ignore="MissingConstraints" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="480dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:autofillHints=""
        android:textSize="20sp"
        android:gravity="start|center_vertical"
        android:minHeight="48dp"
        android:paddingHorizontal="15dp"
        android:drawablePadding="15dp"
        android:hint="@string/no_telp"
        android:textColorHint="@color/grey"
        android:inputType="number"
        android:textColor="@color/black"
        android:background="@drawable/rounded_edittext"
        tools:ignore="MissingConstraints,TextViewEdits" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="540dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:autofillHints=""
        android:textSize="20sp"
        android:gravity="start|center_vertical"
        android:minHeight="48dp"
        android:paddingHorizontal="15dp"
        android:drawablePadding="15dp"
        android:hint="@string/tahun_masuk"
        android:textColorHint="@color/grey"
        android:inputType="text"
        android:textColor="@color/black"
        android:background="@drawable/rounded_edittext"
        tools:ignore="MissingConstraints,TextViewEdits" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="600dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:autofillHints=""
        android:textSize="20sp"
        android:gravity="start|center_vertical"
        android:minHeight="48dp"
        android:paddingHorizontal="15dp"
        android:drawablePadding="15dp"
        android:hint="@string/tahun_lulus"
        android:textColorHint="@color/grey"
        android:inputType="text"
        android:textColor="@color/black"
        android:background="@drawable/rounded_edittext"
        tools:ignore="MissingConstraints,TextViewEdits" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="660dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:autofillHints=""
        android:textSize="20sp"
        android:gravity="start|center_vertical"
        android:minHeight="48dp"
        android:paddingHorizontal="15dp"
        android:drawablePadding="15dp"
        android:hint="@string/pekerjaan"
        android:textColorHint="@color/grey"
        android:inputType="text"
        android:textColor="@color/black"
        android:background="@drawable/rounded_edittext"
        tools:ignore="MissingConstraints,TextViewEdits" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="720dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:autofillHints=""
        android:textSize="20sp"
        android:gravity="start|center_vertical"
        android:minHeight="48dp"
        android:paddingHorizontal="15dp"
        android:drawablePadding="15dp"
        android:hint="@string/jabatan"
        android:textColorHint="@color/grey"
        android:inputType="text"
        android:textColor="@color/black"
        android:background="@drawable/rounded_edittext"
        tools:ignore="MissingConstraints,TextViewEdits" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:paddingLeft="80dp"
        android:paddingRight="80dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="800dp"
        android:layout_marginRight="40dp"
        android:text="@string/simpan"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        />

</FrameLayout>