<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@color/birumuda"
    >

    <ImageView
        android:background="@drawable/alumniimage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="480dp"
        android:contentDescription="@string/image"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:minHeight="10dp"
        android:minWidth="10dp"
        android:paddingHorizontal="10dp"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="282dp"
        android:layout_marginRight="40dp"
        android:autofillHints=""
        android:drawablePadding="15dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/email"
        android:textColorHint="@color/grey"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:paddingHorizontal="15dp"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edittext"
        android:drawablePadding="15dp"
        android:hint="@string/password"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingHorizontal="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/buttonlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="430dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/rounded_button"
        android:paddingLeft="80dp"
        android:paddingRight="80dp"
        android:text="@string/login"
        android:textStyle="bold" />

</RelativeLayout>